# readme-ai

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .readmeaiignore  .ruff.toml  404.html  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  index.html  main.py  mkdocs.yml  noxfile.py  pyproject.toml  readme-ai-base-url-debtest.md  readme-ai-v2.md  readme-ai.md  requirements.txt  setup copy.py  setup.py  sitemap.xml  tree.md
.github/: release-drafter.yml
.github/workflows/: build_docker.yml  build_image.yaml  build_image.yml  build_package.yaml  ci-cd.yaml  ci.yml  coverage.yml  mkdocs.yml  publish_package.yml  publish_pypi.yaml  release-pipeline.yml  update-readme.yml
assets/badges/: badges.md
blog/: index.html
cli/: index.html
cli-reference/: index.html
cli_commands/: index.html
community/contributing/: index.html
community/faq/: index.html
community/troubleshooting/: index.html
concepts/: index.html
conf/: conf.toml  config.yaml  dependency_files.toml  extensions_map.toml  file_extensions.toml  file_names.toml  ignore_files.toml  instructions.toml  language_instructions.toml  language_names.toml  language_setup.toml  setup_guide.toml
conf/driver/: openai.yaml
conf/html/: tags.yaml
conf/input/: github.yaml
conf/paths/: paths.yaml
conf/repository/: github.yaml  local.yaml
conf/svg/: badges_compressed.json
conf/templates/: base_py.toml  base_v1.0.toml  contributing_guidelines.toml  general.toml
configs/: config.yaml
configs/api/: gpt.yaml  openai.yaml
configs/input/: github.yaml  local.yaml
configuration/: index.html
configuration/advanced-examples/: index.html
configuration/badges/: index.html
configuration/basic-examples/: index.html
configuration/cli_reference/: index.html
configuration/emojis/: index.html
configuration/gallery/: index.html
configuration/header/: index.html
configuration/project_logo/: index.html
configuration/table_of_contents/: index.html
contributing/: index.html
cookbook/: index.html
cookbook/markdown-cookbook/: index.html
css/: custom.css  extra.css
customization/badges/: index.html
customization/emojis/: index.html
customization/header/: index.html
customization/project_logo/: index.html
customization/table_of_contents/: index.html
data/docs/: markdown.html  markdown.md
data/output/: docs.csv  file_docs.csv
docs/: README-de.md  README-fr.md  README-zh-CN.md  README.md  README_C.md  README_EX_1.md  README_EX_1_new.md  README_EX_2.md  README_EX_3.md  README_EX_3_FastAPI.md  README_EX_4.md  README_EX_4_PY.md  README_EX_5_GO.md  README_EX_6_JAVA.md  README_EX_C.md  README_EX_GITLAB.md  README_EX_GO.md  README_EX_JS.md  README_EX_RUST.md  README_EX_RUST_GITLAB.md  README_FastAPI.md  README_FastAPI_Redis.md  README_GITLAB.md  README_Go.md  README_Go_Bash.md  README_Java.md  README_JavaScript.md  README_JavaScript_GPT.md  README_Kotlin.md  README_LangChain.md  README_MLOps.md  README_PyFlink.md  README_Python.md  README_Python_ML.md  README_RUST_C.md  README_React.md  README_Rust.md  README_TypeScript.md  architecture.md  cli.md  (+31 more)
docs/configuration/: badges.md  cli_reference.md  emojis.md  header.md  project_logo.md
docs/css/: termynal.css
docs/customization/: badges.md  header.md  project_logo.md  table_of_contents.md
docs/docs/: cli-reference.md  cli.md  cli_commands.md  concepts.md  configuration.md  examples.md  faq.md  how_it_works.md  index.md  installation.md  llm-integrations.md  overview.md  philosophy.md  prerequisites.md  usage.md  why.md
docs/examples/: gallery.md  use_cases.md
docs/gpt/: raw_data.csv
docs/html/: readme.html  (+1 more)
examples/: index.html  readme-ai.md  readme-chunking.md  readme-docker-go.md  readme-energy-forecasting.md  readme-fastapi-redis.md  readme-gemini.md  readme-go.md  readme-header-padded.md  readme-java.md  readme-javascript.md  readme-kotlin.md  readme-lanarky.md  readme-langchain.md  readme-litellm.md  readme-local.md  readme-mlops.md  readme-ollama.md  readme-postgres.md  readme-pyflink.md  readme-python-v0.5.87.md  readme-python.md  readme-readmeai.md  readme-rust-c.md  readme-rust.md  readme-sqlmesh.md  readme-streamlit-dalle.md  readme-streamlit-minimal.md  readme-streamlit-v0.5.88.md  readme-streamlit-v0.588.md  readme-streamlit.md  readme-typescript.md  readme-vercel.md
faq/: index.html
features/: index.html
help/: index.html
how-it-works/: index.html
how_it_works/: index.html
installation/: index.html
integrations/: index.html
js/: extra.js
llm-integrations/: index.html
llms/: index.html
notebooks/: data_checks.ipynb
output/: gpt_output.html  html_docs.html  output.md  raw_docs.csv  structured_doc.html  tree.md
overview/: index.html
philosophy/: index.html
prerequisites/: index.html
pydantic_settings/: index.html
readmeai/: __init__.py  __main__.py  _agent.py  _exceptions.py  app.py  auth.py  builder.py  cli.py  conf.py  errors.py  exceptions.py  factory.py  logger.py  main.py  model.py  oauth_openai_codex.py  parse.py  preprocess.py  readmeai.py  utils.py
scripts/: auto_docstrings.sh  auto_docstrs.sh  build_all.sh  build_docker.sh  build_image.sh  build_md.sh  build_pypi.sh  clean.sh  docker.sh  py_script_header.sh  pypi.sh  run.sh  run_batch.sh  run_batch_random.sh  run_main.sh  test.sh  update_image.sh
search/: search_index.json
setup/: environment.yaml  requirements.txt  setup.sh
src/: builder.py  chatgpt_engine.py  conf.py  exceptions.py  factory.py  file_factory.py  file_parser.py  gpt_model.py  logger.py  main.py  md_helper.py  model.py  parse.py  preprocess.py  preprocess_helper.py  process.py  processor.py  utils.py
tests/: conftest.py  tes_preprocess_helper.py  test_agent.py  test_app.py  test_builder.py  test_conf.py  test_errors.py  test_exceptions.py  test_factory.py  test_file_factory.py  test_logger.py  test_main.py  test_model.py  test_parse.py  test_preprocess.py  test_preprocess_helper.py  test_processor.py  test_readmeai.py  test_utils.py
troubleshooting/: index.html
usage/: index.html
why/: index.html
(+694 files in other folders)
